Added logger messages